@@ -409,7 +409,7 @@ contains
   subroutine glint(params,time,temp,precip,zonwind,merwind,orog, &
        output_flag,orog_out,albedo,ice_frac,water_in, &
        water_out,total_water_in,total_water_out, &
-       ice_volume,new_orog)
+       ice_volume)
 
     !*FD Main Glimmer subroutine.
     !*FD
@@ -449,7 +449,6 @@ contains
     real(rk),               optional,intent(inout) :: total_water_in  !*FD Area-integrated water flux in (kg)
     real(rk),               optional,intent(inout) :: total_water_out !*FD Area-integrated water flux out (kg)
     real(rk),               optional,intent(inout) :: ice_volume      !*FD Total ice volume (m$^3$)
-    logical,                optional,intent(in)    :: new_orog        !*FD Set to false if global orog is unchanged
 
     ! Internal variables ----------------------------------------------------------------------------
 
@@ -457,15 +456,6 @@ contains
     real(rk),dimension(:,:),allocatable :: albedo_temp,if_temp,wout_temp,orog_out_temp,win_temp
     real(rk) :: twin_temp,twout_temp,icevol_temp
     type(output_flags) :: out_f
-    logical :: orogflag
-    
-    ! Find out if we're lucky enough not to need to downscale the orography
-
-    if (present(new_orog)) then
-       orogflag=new_orog
-    else
-       orogflag=.true.
-    end if
 
     ! Set averaging start if necessary and return if this is not a mass-balance timestep
     ! Still not sure if this is the correct solution, but should prevent averaging of one-
@@ -618,7 +608,7 @@ contains
                twout_temp,                   &
                icevol_temp,                  &
                out_f,                        &
-               orogflag)
+               .true.)
 
           ! Add this contribution to the output orography
 
